# deep-learning-for-computer-vision

./: .gitignore  README.md  index.html  mkdocs.yml  pyproject.toml
docs/: index.md
models/: shallownet_animals.keras
notebooks/: 01_basic_image_preprocessor.ipynb  01_data_ingestion_and_label_extraction.ipynb  02_image_preprocessors.ipynb  02_shallownet.ipynb  03_ lenet_recognizing_handwritten_digits.ipynb
sigmoidal/datasets/: simple_dataset_loader.py
sigmoidal/nn/: shallownet.py
sigmoidal/preprocessing/: __init__.py  image_to_array.py  simple_preprocessor.py
sigmoidal/preprocessing.py/: simple_preprocessor.py
src/: paths.py
